--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,13 +41,12 @@
             android:layout_marginEnd="20dp"
             android:background="@drawable/background_white_conner"
             android:hint="Mật khẩu"
-            android:text="phamvankhoa"
             android:inputType="textPassword"
             android:maxLines="1"
             android:paddingStart="20dp"
             android:paddingEnd="40dp"
             android:textColor="@color/colorBlack"
-            android:textColorHint="@color/colorWhite50"
+            android:textColorHint="@color/colorBlack50"
             android:textSize="15sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -61,13 +60,12 @@
             android:layout_marginEnd="20dp"
             android:background="@drawable/background_white_conner"
             android:hint="Mã sinh viên"
-            android:text="B16DCCN193"
             android:inputType="textAutoComplete"
             android:maxLines="1"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textColor="@color/colorBlack"
-            android:textColorHint="@color/colorWhite50"
+            android:textColorHint="@color/colorBlack50"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
