--- a/app/src/main/res/layout/item_thongbao.xml
+++ b/app/src/main/res/layout/item_thongbao.xml
@@ -1,58 +1,81 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Created at 9/25/19 5:23 PM by Khoa
   -->
-
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="@layout/fragment_thongbao">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
 
-    <TextView
-        android:id="@+id/txt_title"
-        android:layout_width="0dp"
+        <variable
+            name="position"
+            type="java.lang.Integer" />
+
+        <variable
+            name="viewmodel"
+            type="com.khoa.myptit.thongbao.viewmodel.ThongBaoViewModel" />
+    </data>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="Title"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@color/colorBlack75"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:cardBackgroundColor="@color/colorWhite"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="0dp">
 
-    <TextView
-        android:id="@+id/txt_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:text="Time"
-        android:textColor="@color/colorPrimary"
-        app:layout_constraintStart_toStartOf="@+id/txt_title"
-        app:layout_constraintTop_toBottomOf="@+id/txt_title" />
+        <androidx.constraintlayout.widget.ConstraintLayout
 
-    <TextView
-        android:id="@+id/txt_content"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:text="Để hỗ trợ sinh viên hoàn thành việc đăng ký các học phần Tốt nghiệp theo quy định, Phòng Giáo vụ thông báo về việc tiếp nhận, hỗ trợ xử lý Đơn cho sinh viên, cụ thể như sau:
-        1.      Đối tượng:
-     -   Tất cả Sinh viên các ngành khối Kỹ thuật D15, L17 và sinh viên các khóa trước còn thời hạn đào tạo, chưa hoàn thành việc đăng ký 2 học phần thay thế tốt nghiệp.
-         2.      Hình thức, thời gian nộp Đơn:
--  Sinh viên làm Đơn theo Mẫu, nộp tại Phòng giáo vụ - Ô số 1 - Văn phòng 1 cửa từ ngày 25/09/2019 đến hết ngày 27/09/2019.
-3.      Thời gian, kết quả xử lý đơn:
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingBottom="16dp"
+            tools:showIn="@layout/fragment_thongbao">
 
-     -   Phòng Giáo vụ sẽ xử lý Đơn, hỗ trợ đăng ký cho sinh viên trong các ngày 30/09 đến 01/10/2019, từ ngày 02/10/2019 sinh viên đăng nhập vào hệ thống qldt.ptit.edu để xem kết quả xử lý Đơn cũng như lịch học cá nhân./."
-        android:textColor="@color/colorBlack50"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/txt_title"
-        app:layout_constraintTop_toBottomOf="@+id/txt_time" />
+            <TextView
+                android:id="@+id/txt_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:gravity="start"
+                android:text="@{viewmodel.getTitleAt(position)}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textColor="@color/colorBlack75"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/txt_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:textSize="13sp"
+                android:gravity="start"
+                android:text="@{viewmodel.getTimeAt(position)}"
+                android:textColor="@color/colorPrimary"
+                app:layout_constraintStart_toStartOf="@+id/txt_title"
+                app:layout_constraintTop_toBottomOf="@+id/txt_title" />
+
+            <TextView
+                android:id="@+id/txt_content"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:setContent="@{position}"
+                android:textSize="13sp"
+                android:textColor="@color/colorBlack50"
+                app:layout_constraintEnd_toEndOf="@id/txt_title"
+                app:layout_constraintStart_toStartOf="@+id/txt_title"
+                app:layout_constraintTop_toBottomOf="@+id/txt_time" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+
+</layout>
