--- a/app/src/main/res/layout/item_thongbao.xml
+++ b/app/src/main/res/layout/item_thongbao.xml
@@ -67,7 +67,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                app:setContent="@{position}"
+                app:setPosition="@{position}"
+                app:setViewModel="@{viewmodel}"
                 android:textSize="13sp"
                 android:textColor="@color/colorBlack50"
                 app:layout_constraintEnd_toEndOf="@id/txt_title"
