--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="loginViewModel"
-            type="com.khoa.myptit.baseViewModel.LoginViewModel" />
+            type="com.khoa.myptit.login.viewmodel.LoginViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorWhite"
-        tools:context=".LoginActivity">
+        tools:context=".login.LoginActivity">
 
 
         <Button
