--- a/app/src/main/res/layout/item_thongbao.xml
+++ b/app/src/main/res/layout/item_thongbao.xml
@@ -23,6 +23,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
+        android:onClick="@{()->viewmodel.onClickItem(position)}"
         app:cardCornerRadius="8dp"
         app:cardElevation="0dp">
 
