--- a/app/src/main/res/layout/fragment_thongbao.xml
+++ b/app/src/main/res/layout/fragment_thongbao.xml
@@ -83,7 +83,7 @@
                 android:id="@+id/swipe_refresh"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
+                android:scrollbars="horizontal"
                 app:layout_constraintEnd_toEndOf="@+id/layout_content"
                 app:layout_constraintStart_toStartOf="@+id/layout_content"
                 app:layout_constraintTop_toTopOf="@+id/layout_content">
@@ -92,6 +92,7 @@
                     android:id="@+id/recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:scrollbars="vertical"
                     tools:itemCount="3"
                     app:setAdapter="@{viewmodel.getAdapter()}"
                     tools:listitem="@layout/item_thongbao" />
