--- a/app/src/main/res/drawable/background_black5_conner.xml
+++ b/app/src/main/res/drawable/background_black5_conner.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created at 10/3/19 10:26 PM by Khoa
+  ~ Created at 9/22/19 9:22 PM by Khoa
   -->
 
 <shape xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="10dp"/>
-    <solid android:color="@color/colorWhite"/>
+    <solid android:color="@color/colorBlack5"/>
 </shape>
