--- a/app/src/main/res/drawable/background_button_color_primary.xml
+++ b/app/src/main/res/drawable/background_button_color_primary.xml
@@ -7,7 +7,7 @@
     <item android:state_pressed="false">
         <shape>
             <corners android:radius="10dp"/>
-            <solid android:color="@color/colorAccent"/>
+            <solid android:color="@color/colorPrimary"/>
         </shape>
 
     </item>
@@ -15,7 +15,7 @@
     <item android:state_pressed="true">
         <shape>
             <corners android:radius="10dp"/>
-            <solid android:color="@color/colorAccentDark"/>
+            <solid android:color="@color/colorAccent"/>
         </shape>
 
     </item>
