--- a/app/src/main/res/layout/item_thongbao.xml
+++ b/app/src/main/res/layout/item_thongbao.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?><!--
   ~ Created at 9/25/19 5:23 PM by Khoa
   -->
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -16,72 +16,61 @@
             type="com.khoa.myptit.thongbao.viewmodel.ThongBaoViewModel" />
     </data>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardview"
-        android:transitionName="contain"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/colorWhite"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="0dp">
+        android:orientation="vertical"
+        android:paddingBottom="16dp"
+        android:background="@drawable/background_clickable"
+        tools:showIn="@layout/fragment_thongbao">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/txt_title"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="16dp"
-            tools:showIn="@layout/fragment_thongbao">
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="start"
+            android:text="@{viewmodel.getTitleAt(position)}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textColor="@color/colorBlack"
+            android:textSize="14sp"
+            android:transitionName="title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/txt_title"
-                android:transitionName="title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:gravity="start"
-                android:text="@{viewmodel.getTitleAt(position)}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:textColor="@color/colorBlack"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/txt_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:gravity="start"
+            android:text="@{viewmodel.getTimeAt(position)}"
+            android:textColor="@color/colorBlack50"
+            android:textSize="12sp"
+            android:transitionName="time"
+            app:layout_constraintStart_toStartOf="@+id/txt_title"
+            app:layout_constraintTop_toBottomOf="@+id/txt_title" />
 
-            <TextView
-                android:id="@+id/txt_time"
-                android:transitionName="time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:textSize="13sp"
-                android:gravity="start"
-                android:text="@{viewmodel.getTimeAt(position)}"
-                android:textColor="@color/colorPrimary"
-                app:layout_constraintStart_toStartOf="@+id/txt_title"
-                app:layout_constraintTop_toBottomOf="@+id/txt_title" />
+        <TextView
+            android:id="@+id/txt_content"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/colorBlack75"
+            android:textSize="13sp"
+            android:transitionName="content"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/txt_title"
+            app:layout_constraintStart_toStartOf="@+id/txt_title"
+            app:layout_constraintTop_toBottomOf="@+id/txt_time"
+            app:setPosition="@{position}"
+            app:setViewModel="@{viewmodel}" />
 
-            <TextView
-                android:id="@+id/txt_content"
-                android:transitionName="content"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:setPosition="@{position}"
-                app:setViewModel="@{viewmodel}"
-                android:textSize="13sp"
-                android:textColor="@color/colorBlack75"
-                app:layout_constraintEnd_toEndOf="@id/txt_title"
-                app:layout_constraintStart_toStartOf="@+id/txt_title"
-                app:layout_constraintTop_toBottomOf="@+id/txt_time" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
