--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,9 +44,9 @@
                         android:id="@+id/frag_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Thông báo"
+                        android:text="Thời khóa biểu"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                        android:textColor="@color/colorBlack"
+                        android:textColor="@color/colorPrimary"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"/>
@@ -61,29 +61,24 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"/>
 
-                    <androidx.cardview.widget.CardView
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        app:cardBackgroundColor="@color/colorPrimary"
-                        app:cardCornerRadius="12dp"
-                        app:cardElevation="0dp"
+                        android:textColor="@color/colorWhite"
+                        android:text="Cập nhật"
+                        android:clickable="true"
+                        android:textStyle="bold"
+                        android:textSize="12sp"
+                        android:paddingEnd="10dp"
+                        android:paddingStart="10dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:layout_marginEnd="20dp"
+                        android:background="@drawable/background_button_color_primary"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent">
+                        app:layout_constraintBottom_toBottomOf="parent"/>
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/colorWhite"
-                            android:text="B16DCCN193"
-                            android:textStyle="bold"
-                            android:textSize="12sp"
-                            android:paddingEnd="10dp"
-                            android:paddingStart="10dp"
-                            android:paddingTop="3dp"
-                            android:paddingBottom="3dp"/>
-                    </androidx.cardview.widget.CardView>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
