--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+<!--        <item name="android:textViewStyle">@style/NiramitTextViewStyle</item>-->
+<!--        <item name="buttonStyle">@style/NiramitButtonStyle</item>-->
     </style>
 
     <style name="Theme.AppCompat.Light.NoActionBar.FullScreen" parent="@style/Theme.AppCompat.Light.NoActionBar">
@@ -13,6 +15,8 @@
         <item name="android:windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
+<!--        <item name="android:textViewStyle">@style/NiramitTextViewStyle</item>-->
+<!--        <item name="buttonStyle">@style/NiramitButtonStyle</item>-->
     </style>
 
     <style name="AppTheme_Main" parent="Theme.AppCompat.DayNight.NoActionBar">
@@ -22,16 +26,38 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
+<!--        <item name="android:textViewStyle">@style/NiramitTextViewStyle</item>-->
+<!--        <item name="buttonStyle">@style/NiramitButtonStyle</item>-->
     </style>
 
     <style name="MyDialogMonHoc" parent="Theme.AppCompat.Dialog">
         <item name="android:windowEnterAnimation">@anim/popup_appear</item>
         <item name="android:windowExitAnimation">@anim/slide_right</item>
+<!--        <item name="android:textViewStyle">@style/NiramitTextViewStyle</item>-->
+<!--        <item name="buttonStyle">@style/NiramitButtonStyle</item>-->
     </style>
 
     <style name="MyDialogTuan" parent="Theme.AppCompat.Dialog">
         <item name="android:windowEnterAnimation">@anim/popup_appear</item>
         <item name="android:windowExitAnimation">@anim/popup_hide</item>
+<!--        <item name="android:textViewStyle">@style/NiramitTextViewStyle</item>-->
+<!--        <item name="buttonStyle">@style/NiramitButtonStyle</item>-->
+    </style>
+
+    <style name="K2DTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/k2d_regular</item>
+    </style>
+
+    <style name="K2DButtonStyle" parent="android:Widget.Holo.Button">
+        <item name="android:fontFamily">@font/k2d_regular</item>
+    </style>
+
+    <style name="NiramitTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/niramit_regular</item>
+    </style>
+
+    <style name="NiramitButtonStyle" parent="android:Widget.Holo.Button">
+        <item name="android:fontFamily">@font/niramit_regular</item>
     </style>
 
 </resources>
